--- a/index.html
+++ b/index.html
@@ -3,9 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="images/tree.svg" sizes="any" type="image/svg+xml">
+    <link rel="stylesheet" href="app.css">
     <title>Christmas Promo</title>
 </head>
 <body>
-    
+    <div class="snow">
+        <div class="card-container">
+            <img src="images/tree.svg" alt="a picture of a christmas tree" width="200px" height="auto"/>
+            <h1>Merry Christmas!</h1>
+            <p class="details-p">You completed all your December's tasks<br /> so we decided to get you a gift:</p>
+            <p class="discount-p">50% off on your Annual Premium Plan!</p>
+            <button class="get-gift-button">Get Your Gift</button>
+        </div>
+      </div>
 </body>
+<script src="app.js"></script>
 </html>
