added screenshot of site to readme

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Christmas Promo</title>
 </head>
 <body>
+    <!-- Snow From Calleb: https://codepen.io/Calleb/pen/dyVRvyW -->
     <div class="snow">
         <div class="card-container">
             <img src="images/tree.svg" alt="a picture of a christmas tree" width="200px" height="auto"/>
